syntax = "proto3";

option csharp_namespace = "GrpcService1";

package customer;

service Customer{
  rpc GetCustomerInfo(CustomerLookUpModel) returns (CustomerModel);
  rpc GetAllCustomers(GetAllCustomersRequest) returns (stream CustomerModel);
}

message GetAllCustomersRequest{

}

message CustomerLookUpModel{
  int32 userId = 1;
}

message CustomerModel{
  CustomerPrivateDetails customerDetails = 1;
  int32 age = 2;
}
message CustomerPrivateDetails {
  string firstName = 1;
  string email = 2;
}